# rxlm

./: GROUPED_GEMM_README.md  LICENSE.md  MODELS_LICENSE.md  README.md  test_grouped_gemm_moe.py  test_vectorized_moe.py
beta-training/cutlass/: Dockerfile  rxlm-0.3.93-py3-none-any.whl  rxlm_pro-0.2.64-py3-none-any.whl
beta-training/no_cutlass/: Dockerfile
docs/: linear_attention.md  md_gdn.md
docs/research/: dmpo-smat-improvements.md  rxt-intro.md  sqa.md  tensor-bleu.md
python/: README.md  pyproject.toml
python/src/rxlm/: compile.py
python/src/rxlm/llm_training/: supervised.py
python/src/rxlm/mem_bench/: benchmark.py  dataset.py  models.py  score.py
python/src/rxlm/memory/: attention.py  stm.py
python/src/rxlm/metrics/: tensorbleu.py
python/src/rxlm/rxt/: models.py
python/src/rxlm/training/: __init__.py  base.py  bml.py  callbacks.py  dataset.py  dmpo.py  models.py  mrl.py  optim.py  reward.py  rl.py  smst.py
python/src/rxlm/transformers/: attention.py  ff.py  layers.py  models.py  moe.py  positional.py
