[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rxlm"
version = "0.3.87"
description = "RxNN - RxLM: Reactive Language Models platform"

authors = [
    "Adam Filipek <adamfilipek@rxai.dev>"
]

repository = "https://github.com/RxAI-dev/rxlm"
homepage = "https://rxai.dev/rxnn"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE", "MODELS_LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["deep-learning", "ai", "machine-learning", "natural-language-processing", "nlp", "agi", "memory-system"]

[project]
name = "rxlm"
version = "0.3.87"
description = "RxNN - RxLM: Reactive Language Models platform"

license-files = [
    "LICENSE",
    "MODELS_LICENSE"
]


[tool.poetry.dependencies]
python = ">=3.12"
torch = "^2.9.0"
transformers = "^5.3.0"
datasets = "^4.0.0"
tokenizers = "^0.22.2"
huggingface-hub = "^1.5.0"
tensorboard = "^2.19.0"
nltk = "^3.9.1"
scikit-learn = "^1.7.2"
transformer-engine = '^2.9.0'
